--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "it": "^1.1.1",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "next-redux-wrapper": "^8.1.0",
     "nookies": "^2.5.2",
     "react": "^18",
